--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "prepare": "yarn build",
     "test": "jest",
-    "typedoc": "typedoc --theme minimal --out docs src/index.ts --ignoreCompilerErrors",
+    "typedoc": "typedoc --theme minimal --out docs src/module.ts --ignoreCompilerErrors",
     "build.main": "tsc -P tsconfig.main.json",
     "build.module": "tsc -P tsconfig.module.json",
     "build.iife": ": rollup --name undefined --file styled-components.js",
