--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@nju33/styled-components",
+  "publishConfig":{
+    "registry": "http://my-internal-registry.local"
+  },
   "version": "0.0.0",
   "main": "dist/main/main.js",
   "repository": "git@github.com:nju33/styled-components.git",
