--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@nju33/styled-components",
   "publishConfig": {
-    "registry": "http://my-internal-registry.local"
+    "access": "public"
   },
-  "version": "0.0.1",
+  "version": "0.0.3",
   "main": "dist/main/main.js",
   "repository": "git@github.com:nju33/styled-components.git",
   "author": "nju33 <nju33.ki@gmail.com>",
